Change url to https

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://gianluigitrontini.github.io/danilo-barzaghini-web",
+  "homepage": "https://gianluigitrontini.github.io/danilo-barzaghini-web",
   "name": "danilo-barzaghini-web",
   "version": "0.1.0",
   "private": true,
